Added creation of access key
