# apiserver/app.js
@@ -15,6 +15,7 @@ const rolesRouter = require('./routes/roles');
 const makesRouter = require('./routes/makes');
 const postRouter = require('./routes/posts');
 const corRouter = require('./routes/cars');
+const keyRouter = require('./routes/keys');
 
 var app = express();
 
@@ -36,6 +37,7 @@ app.use('/api/v1/auth', loginRouter);
 app.use('/api/v1/makes', makesRouter);
 app.use('/api/v1/posts', postRouter);
 app.use('/api/v1/cars', corRouter);
+app.use('/api/v1/keys', keyRouter);
 
 // Swagger Document
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(specs, { explorer: true }));
